updated the requirements file; copied and created client_secret files

--- a/okta-hosted-login/client_secrets.json.dist
+++ b/okta-hosted-login/client_secrets.json.dist
@@ -1,9 +1,11 @@
 {
-  "auth_uri": "https://{{OKTA_DOMAIN}}/oauth2/default/v1/authorize",
-  "client_id": "{{CLIENT_ID}}",
-  "client_secret": "{{CLIENT_SECRET}}",
+  "auth_uri": "https://dev-33690073.okta.com/oauth2/default/v1/authorize",
+  "client_id": "0oa1nrwlw6pLIFoM55d7",
+  "client_secret": "z07k-xfEVo9y7Wd6KcF6G3c9ZulPlrlqytYLCUC2",
   "redirect_uri": "http://localhost:8080/authorization-code/callback",
-  "issuer": "https://{{OKTA_DOMAIN}}/oauth2/default",
-  "token_uri": "https://{{OKTA_DOMAIN}}/oauth2/default/v1/token",
-  "userinfo_uri": "https://{{OKTA_DOMAIN}}/oauth2/default/v1/userinfo"
+  "issuer": "https://dev-33690073.okta.com/oauth2/default",
+  "token_uri": "https://dev-33690073.okta.com/oauth2/default/v1/token",
+  "userinfo_uri": "https://dev-33690073.okta.com/oauth2/default/v1/userinfo",
+  "introspection_endpoint": "https://dev-33690073.okta.com/oauth2/default/v1/introspect",
+  "jwks_uri": "https://dev-33690073.okta.com/oauth2/default/v1/keys"
 }
