--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 requests==2.21.0
-Flask==1.0.2
-flask-cors==3.0.10
-pyOpenSSL==23.2.0
+Flask==2.1.3
+flask-cors==3.0.9
+pyOpenSSL==22.0.0
 Flask-Login==0.4.1
-okta-jwt-verifier==0.2.0
+okta-jwt-verifier==0.2.3
+Werkzeug==2.0.0
+jinja2==3.0.3
